fixed addEditReminder bug with missing doneDates parameter everywhere
